[package]
name = "kvm-bindings"
version = "0.1.1"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]
description = "Rust FFI bindings to KVM generated using bindgen."
repository = "https://github.com/rust-vmm/kvm-bindings"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0"

[features]
kvm-v4_14_0 = []
kvm-v4_20_0 = []

[dependencies]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
serde = ">=1.0.27"
serde_derive = ">=1.0.27"